--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UseInMemoryDatabase": false,
+  "ConnectionsStrings": {
+    "DefaultConnection": ""
+  },
+  "IdentityServer": {
+    "Clients": {
+      "CleanArchitecture.WebUI": {
+        "Profile":  "IdentityServerSPA"
+      }
+    }
+  }
 }
